{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 11,
  "lineage": "24023066-6cbe-e4e1-1b23-277166c8ea62",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:637423491413:instance/i-07fce30f360abaf5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07fce30f360abaf5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c69ec1a8456c205e",
            "private_dns": "ip-172-31-28-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.164",
            "public_dns": "ec2-54-226-214-191.compute-1.amazonaws.com",
            "public_ip": "54.226.214.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c832a898dd25130e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "MyEC2Instance_sg20241118082248757800000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6e8c4cf29410258",
            "tags": {
              "Name": "MyEC2Instance"
            },
            "tags_all": {
              "Name": "MyEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef5600935bd41f7b"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.allow_ssh",
            "module.ec2_instance.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423491413:security-group/sg-0ef5600935bd41f7b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef5600935bd41f7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "MyEC2Instance_sg20241118082248757800000001",
            "name_prefix": "MyEC2Instance_sg",
            "owner_id": "637423491413",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b65fccedea678f47"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423491413:security-group/sg-0746f9e772c539cbf",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0746f9e772c539cbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyEC2Instance_sg20241118084915039600000001",
            "name_prefix": "MyEC2Instance_sg",
            "owner_id": "637423491413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b65fccedea678f47"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}